test_suite/tests/ui/expected-string/byte_character.stderr
error: expected serde rename attribute to be a string: `rename = "..."`
 --> $DIR/byte_character.rs:5:22
  |
5 |     #[serde(rename = b'a')]
  |                      ^^^^

error: aborting due to previous error

