test_suite/tests/ui/expected-string/byte_character.rs
use serde_derive::Serialize;

#[derive(Serialize)]
struct S {
    #[serde(rename = b'a')]
    byte_character: (),
}

fn main() {}
